--- a/Nuget/package.nuspec
+++ b/Nuget/package.nuspec
@@ -2,12 +2,12 @@
 <package >
   <metadata>
     <id>HaemmerElectronics.SeppPenner.Serilog.Sinks.AmazonS3</id>
-    <version>1.0.0.0</version>
+    <version>1.0.1.0</version>
     <authors>SeppPenner</authors>
     <owners>SeppPenner</owners>
     <projectUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3/</projectUrl>
 	<licenseUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3/blob/master/License.txt</licenseUrl>
-	<iconUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3/blob/master/Icon.png</iconUrl>
+	<iconUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3/blob/master/Icon.png?raw=true</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>
 		Serilog.Sinks.AmazonS3 is a library to save logging information from https://github.com/serilog/serilog to https://aws.amazon.com/s3/.
@@ -17,6 +17,7 @@
 		so thanks to all the https://github.com/serilog/serilog-sinks-file/graphs/contributors of this project :thumbsup:.
 	</description>
     <releaseNotes>
+	    Version 1.0.1.0 (2019-06-23): Added icon to the nuget package.
 	    Version 1.0.0.0 (2019-05-31): 1.0 release.
 	</releaseNotes>
     <copyright>Copyright © Hämmer Electronics</copyright>
