nuget spec updated

--- a/Nuget/package.nuspec
+++ b/Nuget/package.nuspec
@@ -2,8 +2,8 @@
 <package >
   <metadata>
     <id>HaemmerElectronics.SeppPenner.Serilog.Sinks.AmazonS3</id>
-    <version>1.0.1.0</version>
-    <authors>SeppPenner</authors>
+    <version>1.0.2.0</version>
+    <authors>SeppPenner,ioxFR</authors>
     <owners>SeppPenner</owners>
     <projectUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3/</projectUrl>
 	<licenseUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3/blob/master/License.txt</licenseUrl>
@@ -17,6 +17,7 @@
 		so thanks to all the https://github.com/serilog/serilog-sinks-file/graphs/contributors of this project :thumbsup:.
 	</description>
     <releaseNotes>
+		Version 1.0.2.0 (2019-07-19): Support of role based authorization to S3 added.
 	    Version 1.0.1.0 (2019-06-23): Added icon to the nuget package.
 	    Version 1.0.0.0 (2019-05-31): 1.0 release.
 	</releaseNotes>
