--- a/Nuget/package.nuspec
+++ b/Nuget/package.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>HaemmerElectronics.SeppPenner.Serilog.Sinks.AmazonS3</id>
-    <version>1.0.2.0</version>
+    <version>1.0.3.0</version>
     <authors>SeppPenner</authors>
     <owners>SeppPenner</owners>
     <projectUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3/</projectUrl>
@@ -10,30 +10,28 @@
 	<iconUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3/blob/master/Icon.png?raw=true</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>
-		Serilog.Sinks.AmazonS3 is a library to save logging information from https://github.com/serilog/serilog to https://aws.amazon.com/s3/.
-		The idea there was to upload log files to https://aws.amazon.com/s3/ to later evaluate them with https://aws.amazon.com/emr/ services.
-		The assembly was written and tested in .Net Framework 4.8 and .Net Standard 2.0.
-		This project makes use of the https://github.com/serilog/serilog-sinks-file's code in a major part,
-		so thanks to all the https://github.com/serilog/serilog-sinks-file/graphs/contributors of this project :thumbsup:.
+	  Serilog.Sinks.AmazonS3 is a library to save logging information from https://github.com/serilog/serilog to https://aws.amazon.com/s3/.
+	  The idea there was to upload log files to https://aws.amazon.com/s3/ to later evaluate them with https://aws.amazon.com/emr/ services.
+	  The assembly was written and tested in .Net Framework 4.8 and .Net Standard 2.0.
+	  This project makes use of the https://github.com/serilog/serilog-sinks-file's code in a major part,
+	  so thanks to all the https://github.com/serilog/serilog-sinks-file/graphs/contributors of this project :thumbsup:.
 	</description>
     <releaseNotes>
-		Version 1.0.2.0 (2019-07-19): Support of role based authorization to S3 added, failureCallback parameter added.
-	    Version 1.0.1.0 (2019-06-23): Added icon to the nuget package.
-	    Version 1.0.0.0 (2019-05-31): 1.0 release.
+	  Version 1.0.3.0 (2019-11-08): Updated nuget packages, added GitVersionTask.
 	</releaseNotes>
     <copyright>Copyright © Hämmer Electronics</copyright>
     <tags>c# csharp serilog amazon s3 amazons3 sink logging log</tags>
   </metadata>
   <files>
-		<file src="README.md" target="lib/" />
-		<file src="License.txt" target="" />
-		<file src="Documentation\**" target="lib\Documentation" />
-		<file src="Source\net45\**" target="lib\net45" />
-		<file src="Source\net46\**" target="lib\net46" />
-		<file src="Source\net462\**" target="lib\net462" />
-		<file src="Source\net47\**" target="lib\net47" />
-		<file src="Source\net472\**" target="lib\net472" />
-		<file src="Source\net48\**" target="lib\net48" />
-		<file src="Source\netstandard2.0\**" target="lib\netstandard2.0" />
+	  <file src="README.md" target="lib/" />
+	  <file src="License.txt" target="" />
+	  <file src="Documentation\**" target="lib\Documentation" />
+	  <file src="Source\net45\**" target="lib\net45" />
+	  <file src="Source\net46\**" target="lib\net46" />
+	  <file src="Source\net462\**" target="lib\net462" />
+	  <file src="Source\net47\**" target="lib\net47" />
+	  <file src="Source\net472\**" target="lib\net472" />
+	  <file src="Source\net48\**" target="lib\net48" />
+	  <file src="Source\netstandard2.0\**" target="lib\netstandard2.0" />
     </files>
 </package>
