--- a/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
+++ b/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
@@ -52,8 +52,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.3.104.3" />
-    <PackageReference Include="Serilog" Version="2.8.0" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.106.3" />
+    <PackageReference Include="GitVersionTask" Version="5.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Serilog" Version="2.9.0" />
   </ItemGroup>
 
 </Project>
