--- a/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
+++ b/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
@@ -10,17 +10,17 @@
     <PackageProjectUrl>https://www.nuget.org/packages/HaemmerElectronics.SeppPenner.Serilog.Sinks.AmazonS3/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/SeppPenner/https://github.com/SeppPenner/Serilog.Sinks.AmazonS3/blob/master/License.txt</PackageLicenseUrl>
-    <AssemblyVersion>1.0.7.0</AssemblyVersion>
-    <FileVersion>1.0.7.0</FileVersion>
-    <Version>1.0.7</Version>
+    <AssemblyVersion>1.0.8.0</AssemblyVersion>
+    <FileVersion>1.0.8.0</FileVersion>
+    <Version>1.0.8</Version>
     <PackageTags>c# csharp serilog amazon s3 amazons3 sink logging log</PackageTags>
-    <PackageReleaseNotes>Version 1.0.7.0 (2020-02-09): Updated nuget packages, updated available versions.</PackageReleaseNotes>
+    <PackageReleaseNotes>Version 1.0.8.0 (2020-03-26): Updated nuget packages.</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.3.110.21" />
-    <PackageReference Include="GitVersionTask" Version="5.1.3">
+    <PackageReference Include="AWSSDK.S3" Version="3.3.110.40" />
+    <PackageReference Include="GitVersionTask" Version="5.2.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
