--- a/src/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
+++ b/src/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
@@ -16,7 +16,7 @@
     <RepositoryUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3</RepositoryUrl>
     <PackageIcon>Icon.png</PackageIcon>
     <RepositoryType>Github</RepositoryType>
-    <PackageReleaseNotes>Version 1.1.5.0 (2021-04-29): Updated nuget packages.</PackageReleaseNotes>
+    <PackageReleaseNotes>Version 1.1.6.0: Updated nuget packages.</PackageReleaseNotes>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
