--- a/src/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
+++ b/src/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
@@ -16,7 +16,7 @@
     <RepositoryUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3</RepositoryUrl>
     <PackageIcon>Icon.png</PackageIcon>
     <RepositoryType>Github</RepositoryType>
-    <PackageReleaseNotes>Version 1.2.6.0 (2022-06-01): Updated NuGet packages.</PackageReleaseNotes>
+    <PackageReleaseNotes>Version 1.2.7.0 (2022-08-03): Updated NuGet packages, fixed issue with service url (Thanks to @kosovrzn).</PackageReleaseNotes>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
     <LangVersion>latest</LangVersion>
 	<Nullable>enable</Nullable>
