--- a/src/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
+++ b/src/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
@@ -16,7 +16,7 @@
     <RepositoryUrl>https://github.com/SeppPenner/Serilog.Sinks.AmazonS3</RepositoryUrl>
     <PackageIcon>Icon.png</PackageIcon>
     <RepositoryType>Github</RepositoryType>
-    <PackageReleaseNotes>Version 1.2.7.0 (2022-08-03): Updated NuGet packages, fixed issue with service url (Thanks to @kosovrzn).</PackageReleaseNotes>
+    <PackageReleaseNotes>Version 1.2.8.0 (2022-08-28): Updated NuGet packages.</PackageReleaseNotes>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
     <LangVersion>latest</LangVersion>
 	<Nullable>enable</Nullable>
@@ -28,7 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.7.9.35" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.9.43" />
     <PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
