Added readme to package.

--- a/src/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
+++ b/src/Serilog.Sinks.AmazonS3/Serilog.Sinks.AmazonS3.csproj
@@ -26,7 +26,8 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <ImplicitUsings>enable</ImplicitUsings>
         <NoWarn>NU1803</NoWarn>
-        <WarningsAsErrors>true</WarningsAsErrors>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
